--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "assign1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdDw6vaFjFscCsKvbjRcst",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,19 +31,56 @@
         "colab": {}
       },
       "source": [
+        "import itertools\n",
         "def result(main,sub):\n",
-        "  for i in range(len(main)):\n",
-        "  for j in range(i+1,len(main)+1):\n",
-        "    if len(main[i:j])==len(sub):\n",
-        "      if main[i:j]==sub:\n",
-        "        print(\"YES\")\n",
-        "        return\n",
-        "      else:\n",
-        "        print(\"NO\")\n",
-        "        return\n",
-        "  "
+        "  for ele in itertools.combinations(main,len(sub)):\n",
+        "    if list(ele)==sub:\n",
+        "      print(\"yes\")\n",
+        "      return\n",
+        "    else:\n",
+        "      pass\n",
+        "  print(\"No\")\n",
+        "  return"
       ],
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mkVhfnEhXOO9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "327d042b-ce2d-4373-ca3d-688ff453a932"
+      },
+      "source": [
+        "result([3,5,8,7,9,2],[5,9])"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "yes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E4W0iiBDaRfX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 7,
       "outputs": []
     }
   ]
